samples/_failures_safe/1761150514_d0f621_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4fb6545e.c: In function ‘main’:
./samples/SAFE/__tmp_4fb6545e.c:174:25: error: missing terminating " character
  174 |         fprintf(stderr, "Error reading
      |                         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_4fb6545e.c:174:9: error: expected expression at end of input
  174 |         fprintf(stderr, "Error reading
      |         ^~~~~~~
./samples/SAFE/__tmp_4fb6545e.c:174:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4fb6545e.c:174:9: error: expected declaration or statement at end of input
